final changes / bug fixes

--- a/src/components/List/Item/Item.module.scss
+++ b/src/components/List/Item/Item.module.scss
@@ -23,10 +23,11 @@
 		.hoverImage {
 			display: block;
 			cursor: pointer;
+			z-index: 1;
 		}
-    .concluido {
-      display: none;
-    }
+		.concluido {
+			display: none;
+		}
 	}
 
 	h3 {
