--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -32,6 +32,20 @@
 			}
 		}
 	}
+	.TimeField {
+		width: 100%;
+		div {
+			margin: 0;
+			padding: 0;
+		}
+		input {
+			text-align: center;
+			z-index: 1;
+			width: 100%;
+			height: 100%;
+			color: rgb(240, 240, 240);
+		}
+	}
 
 	@media screen and (min-width: 1280px) {
 		flex-direction: row;
